--- a/core/src/main/resources/alarm.properties
+++ b/core/src/main/resources/alarm.properties
@@ -1,5 +1,6 @@
 appName=phAlarm
-alarmConfPath=alarmConfig
+#alarmConfPath=/Users/zcc/git/quick-alarm/docker/alarmConfig
+alarmConfPath=/home/app/alarmConfig
 maxAlarmType=1000
 defaultAlarmUsers=zcc
 
